cabal-version:      2.2
name:               http-client-events
version:            1.0.0
synopsis:           Client-side consumption of a ServerEvent.
description:        Client-side consumption of a ServerEvent.
homepage:           https://github.com/kadena-io/http-client-events
author:             Colin Woodbury
maintainer:         colin@kadena.io
copyright:          2019 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  Network.HTTP.Client.Events
  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities

  build-depends:
    , base       >=4.9 && <5
    , wai-extra  ^>=3.0
